--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -219,6 +219,9 @@ h1 {
 
 /* CONTENT BREADCRUMBS STYLING */
 .breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   font-size: 0.85rem;
   color: #666;
   margin-bottom: 1rem;
@@ -227,6 +230,7 @@ h1 {
 .breadcrumbs a {
   color: #204312;
   text-decoration: none;
+  font-weight: 600;
 }
 
 .breadcrumbs a:hover {
@@ -234,9 +238,11 @@ h1 {
 }
 
 .breadcrumb-separator {
-  margin: 0 0.4rem;
+  margin: 0 0.25rem;
   color: #aaa;
+  font-weight: normal;
 }
+
 
 /* RESPONSIVE TABLE */
 .responsive-table {
