--- a/assets/css/_blocks.scss
+++ b/assets/css/_blocks.scss
@@ -119,13 +119,13 @@
 .rotated-label-container {
   margin-right: 0.5rem; /* Reduced right margin */
   align-self: flex-start; /* Align with the start of the flex item */
-  margin-top: 0.15rem; /* Slightly adjusted top margin */
+  margin-top: 0.18rem; /* Tiny adjustment */
 }
 
 .rotated-step-container {
   margin-right: 0.5rem; /* Reduced right margin */
   align-self: flex-start; /* Align with the start of the flex item */
-  margin-top: 2.25rem; /* Slightly adjusted top margin */
+  margin-top: 2.28rem; /* Tiny adjustment */
 }
 
 .rotated-label {
