--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,10 @@ h1 {
   color: #204312;
 }
 
+h2 {
+  color: #204312;
+}
+
 .sustainamo-script {
   font-family: "alkaline", sans-serif;
   font-weight: normal;
