--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,11 @@ h2 {
   color: #204312;
 }
 
+h3 {
+  color: #204312;
+}
+
+
 .sustainamo-script {
   font-family: "alkaline", sans-serif;
   font-weight: normal;
