--- a/_includes/style-guide/basic.html
+++ b/_includes/style-guide/basic.html
@@ -5,8 +5,8 @@ Expects a variable `basic` with `.title` and `.content`
 
 <section id="{{ basic.title | slugify }}" class="guide-basic">
   <h2>{{ basic.title }}</h2>
+
   <div class="basic-preview">
-    {{ basic.content }}
+    {{ basic.content | markdownify }}
   </div>
-  <hr>
 </section>
