--- a/_includes/style-guide/basic.html
+++ b/_includes/style-guide/basic.html
@@ -1,4 +1,5 @@
-<section id="{{ basic.title | slugify }}" class="guide-basic">
+<!-- <section id="{{ basic.title | slugify }}" class="guide-basic">
+-->
   <h2>{{ basic.title }}</h2>
 
   <div class="basic-preview">
@@ -11,4 +12,6 @@
     <pre><code>{{ basic.content | escape }}</code></pre>
   </details>
   -->
-</section>
+  
+  <!--
+</section> -->
