--- a/_includes/style-guide/component.html
+++ b/_includes/style-guide/component.html
@@ -1,12 +1,8 @@
-<section id="{{ comp.title | slugify }}" class="guide-component">
-  <h2>{{ comp.title }}</h2>
+<section id="{{ component.title | slugify }}" class="guide-component">
+  <!--  <h2>{{ component.title }}</h2>   -->
 
-  <div class="component-preview">
-    {{ comp.content | markdownify }}
+  {%assign parts = component.content | split:  '<!-- preview end -->' %}
+    
+  <div class="component">
+    {{ parts[0] | markdownify }}
   </div>
-
-  <details>
-    <summary>Show code</summary>
-    <pre><code>{{ comp.content | escape }}</code></pre>
-  </details>
-</section> 
