--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,13 @@ hr {
   margin-bottom: 20px;
 }
 
+.short-hr {
+  width: 60px;
+  margin: 2rem auto;
+  border: none;
+  border-top: 2px solid #ccc;
+}
+
 /* TYPOGRAPHY */
 h1 {
   font-size: 1.8rem;
