--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -2,12 +2,16 @@
 
 :root {
   --color-primary:    #204312;
-  --color-secondary: #6A8A56;
+  --color-secondary: #BDC7B9;
+  --color-tertiary:  #607956;
   --color-accent:     #F4A261;
+  --color-background: #FBFBFB;
   --color-grey-100: #f9f9f9;
   --color-grey-500: #666666;
   --color-grey-900: #222222;
-  --color-link:       #007bff;
+  --color-link:       #175076;
+  --color-link-hover:#1565a5;
+  --color-link-clicked: #4b3b6b;
   --color-grey-border: #ddd;
   --color-grey-light:  #eee;
   --color-grey-separator: #aaa;
