--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,22 +28,17 @@ hr {
 }
 
 /* TYPOGRAPHY */
-h1 {
-  font-size: 1.8rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
+body {
+  font-family: 'Manrope', sans-serif;
   font-weight: 300;
-  color: var(--color-primary);
+  font-size: 0.95rem;
+  line-height: 1.6;
+  color: #222;
 }
 
-h2 {
-  color: var(--color-primary);
+strong, b {
+  font-weight: 600;
 }
-
-h3 {
-  color: var(--color-primary);
-}
-
 
 .sustainamo-script {
   font-family: "alkaline", sans-serif;
@@ -51,6 +46,17 @@ h3 {
   font-style: normal;
   font-size: 1.2rem;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+h1 { font-size: 2rem; }
+h2 { font-size: 1.5rem; }
+h3 { font-size: 1.2rem; }
+h4 { font-size: 1.0rem; }
 
 /* MISC */
 .responsive-img {
