--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,7 +29,7 @@ hr {
 
 /* TYPOGRAPHY */
 body {
-  font-family: 'Manrope', sans-serif;
+  font-family: 'Manrope', 'Segoe UI', Roboto, sans-serif;
   font-weight: 300;
   font-size: 0.95rem;
   line-height: 1.6;
@@ -48,7 +48,7 @@ strong, b {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', 'Segoe UI', Roboto, sans-serif;
   font-weight: 600;
   line-height: 1.2;
 }
