--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/ope1aws.css">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 
 
   <!-- Begin SEO -->
