--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,7 +29,7 @@ hr {
 
 /* TYPOGRAPHY */
 body {
-  font-family: 'Poppins'', 'Segoe UI', Roboto, sans-serif;
+  font-family: 'Poppins', 'Segoe UI', Roboto, sans-serif;
   font-weight: 300;
   font-size: 0.95rem;
   line-height: 1.6;
