--- a/_includes/hero-home.html
+++ b/_includes/hero-home.html
@@ -8,7 +8,7 @@
       <img src="/assets/images/heros/ab-hero-home-turbsSunset2-800x333.webp" alt="Sunset over wind turbines">
     </picture>
     <div class="hero-content position-2">
-      <h1>Share. Act. Sustain</h1>
+      <h1 class="hero-font">Share. Act. Sustain</h1>
     </div>
   </div>
 
@@ -20,7 +20,7 @@
       <img src="/assets/images/heros/ab-hero-home-kawkwangbeach-800x333.webp" alt="Kaw Kwang beach at low tide">
     </picture>
     <div class="hero-content position-2">
-      <h1>Share. Act. Sustain</h1>
+      <h1 class="hero-font">Share. Act. Sustain</h1>
     </div>
   </div>
 
@@ -32,7 +32,7 @@
       <img src="/assets/images/heros/ab-hero-home-insulation-800x333.webp" alt="Installing loft insulation">
     </picture>
     <div class="hero-content position-2">
-      <h1>Share. Act. Sustain</h1>
+      <h1 class="hero-font">Share. Act. Sustain</h1>
     </div>
   </div>
 
@@ -44,7 +44,7 @@
       <img src="/assets/images/heros/ab-hero-home-copTalk-800x333.webp" alt="People talking at a climate conference">
     </picture>
     <div class="hero-content position-2">
-      <h1>Share. Act. Sustain</h1>
+      <h1 class="hero-font">Share. Act. Sustain</h1>
     </div>
   </div>
 
