--- a/_includes/hero-home.html
+++ b/_includes/hero-home.html
@@ -7,7 +7,7 @@
       <source media="(min-width: 601px)" srcset="/assets/images/heros/ab-hero-home-turbsSunset2-1200x600.webp">
       <img src="/assets/images/heros/ab-hero-home-turbsSunset2-800x333.webp" alt="Sunset over wind turbines">
     </picture>
-    <div class="hero-content position-2">
+    <div class="hero-font">
       <h1>Share. Act. Sustain</h1>
     </div>
   </div>
@@ -19,7 +19,7 @@
       <source media="(min-width: 601px)" srcset="/assets/images/heros/ab-hero-home-kawkwangbeach-1200x600.webp">
       <img src="/assets/images/heros/ab-hero-home-kawkwangbeach-800x333.webp" alt="Kaw Kwang beach at low tide">
     </picture>
-    <div class="hero-content position-2">
+    <div class="hero-font">
       <h1>Share. Act. Sustain</h1>
     </div>
   </div>
@@ -31,7 +31,7 @@
       <source media="(min-width: 601px)" srcset="/assets/images/heros/ab-hero-home-insulation-1200x600.webp">
       <img src="/assets/images/heros/ab-hero-home-insulation-800x333.webp" alt="Installing loft insulation">
     </picture>
-    <div class="hero-content position-2">
+    <div class="hero-font">
       <h1>Share. Act. Sustain</h1>
     </div>
   </div>
@@ -43,7 +43,7 @@
       <source media="(min-width: 601px)" srcset="/assets/images/heros/ab-hero-home-copTalk-1200x600.webp">
       <img src="/assets/images/heros/ab-hero-home-copTalk-800x333.webp" alt="People talking at a climate conference">
     </picture>
-    <div class="hero-content position-2">
+    <div class="hero-font">
       <h1>Share. Act. Sustain</h1>
     </div>
   </div>
