--- a/assets/css/_hero.scss
+++ b/assets/css/_hero.scss
@@ -43,6 +43,6 @@
   white-space: normal; // allow wrap
   text-shadow:
     0 0 4px var(--color-primary),
-    0 0 6px var(--color-primary),
+    0 0 6px var(--color-primary);
   color: var(--color-background);
 }
