updating 'in this section' menu

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,4 +1,10 @@
 /******************************/
+/* FONT VARIABLES           */
+/******************************/
+$font-heading: 'Montserrat', 'Segoe UI', Roboto, sans-serif;
+$font-body: 'Poppins', 'Segoe UI', Roboto, sans-serif;
+
+/******************************/
 /* COLOUR VARIABLES           */
 /******************************/
 $color-primary:    #204312;
