--- a/_layouts/styleguide.html
+++ b/_layouts/styleguide.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+{% include breadcrumbs.html %}
+
 <div class="wrap styleguide">
   <h1>{{ page.title }}</h1>
   {{ content }}
