changed from import to use in css

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,11 +1,11 @@
 ---
 ---
 
-@import "minima";
-@import "variables";
-@import "blocks";
-@import "tables";
-@import "hero";
+@use "minima";
+@use "variables";
+@use "blocks";
+@use "tables";
+@use "hero";
 
 // customisations below
 // =========================
